--- a/frontend/css/signup.css
+++ b/frontend/css/signup.css
@@ -79,3 +79,41 @@ a:hover {
     font-size: 1.5rem;
   }
 }
+.popup {
+  position: fixed;
+  left: 50%;
+  top:50%;
+  transform: translate(-50%, -50%);
+  background: #28a7469d;
+  color: white !important;
+  padding: 16px 24px;
+  border-radius: 12px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+  font-size: 16px;
+  z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.4s ease, transform 0.4s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  max-width: 600px;
+}
+
+.popup.show {
+  opacity: 1;
+}
+
+.popup-icon {
+  font-size: 18px;
+}
+
+.hidden {
+  display: none;
+}
+
+#popup-message {
+  font-size: 3em;
+  color:red;
+}
